--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "mess-portal",
     "main": "index.js",
     "scripts": {
-        "build": "cd frontend && npm run build"
+        "postinstall": "cd frontend && npm install --force",
+        "start": "cd frontend && npm run build && cd .. && node index.js"
     },
     "license": "ISC",
     "dependencies": {
